<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>uk.ac.ebi</groupId>
  <artifactId>jutils-pom</artifactId>
  <version>10.0-SNAPSHOT</version>
  <packaging>pom</packaging>
    
  <name>JUtils - Miscellanea of Java Utils</name>
  <description>
  	General utility code for several purposes.

  	This project is an empty container of POM type. Most of the real stuff
  	is in jutils and extensions are linked from here as modules.
  
  	The project originated in the ISA-Tools project (http://isa-tools.org).
  </description>
  <url>https://github.com/ISA-tools/jUtils</url>

  <!-- Developer Listing -->
  <developers>
    <developer>
      <id>brandizi</id>
      <name>Marco Brandizi</name>
      <email>marco.brandizi@gmail.com</email>
      <timezone>0</timezone>
      <properties />
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>1.7.5</slf4j.version>
  </properties>

  <scm>
  	<developerConnection>scm:git:git@github.com:ISA-tools/jUtils.git</developerConnection>
    <tag>HEAD</tag>
  </scm>   


	<parent>
		<groupId>uk.ac.ebi.fg.biosd</groupId>
		<artifactId>biosd_deploy</artifactId>
		<version>1.0</version>
	</parent>


	<dependencyManagement>
		<dependencies>
		
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<!-- The policy is to use these bridges where needed, due to transitive deps -->			
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			
			<!-- An SLF4J extension, which allows for log levels (http://projects.lidalia.org.uk/lidalia-slf4j-ext/) -->
			<dependency>
			  <groupId>uk.org.lidalia</groupId>
			  <artifactId>lidalia-slf4j-ext</artifactId>
			  <version>1.0.0</version>
			  <exclusions>
			  	<exclusion>
			  		<groupId>com.google.guava</groupId>
			  		<artifactId>guava</artifactId>
			  	</exclusion>
			  </exclusions>
			</dependency>
	
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.9</version>
			</dependency>
	
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.8</version>
			</dependency>	
	
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.6</version>
			</dependency>
	
		  <dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.10</version>
		  </dependency>
		  
		  <!-- It seems that currently there is no official Oracle release of JPA 2.0, so we need to rely on some implementor  -->
			<dependency>
				<groupId>org.hibernate.javax.persistence</groupId>
				<artifactId>hibernate-jpa-2.1-api</artifactId>
				<version>1.0.0.Final</version>
			</dependency>
			
			<dependency>
			  <groupId>com.google.guava</groupId>
			  <artifactId>guava</artifactId>
				<version>28.1-jre</version>
			</dependency>		

			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.2</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
	
			<dependency>
				<groupId>org.json</groupId>
				<artifactId>json</artifactId>
				<version>20180130</version>
			</dependency>

			<dependency>
			  <groupId>com.machinezoo.noexception</groupId>
			  <artifactId>noexception</artifactId>
			  <version>1.3.2</version>
			</dependency>
	
			<dependency>
				<groupId>one.util</groupId>
				<artifactId>streamex</artifactId>
				<version>0.7.2</version>
			</dependency>	
			
			<!-- TEST -->
	
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>0.9.29</version>
		    <scope>test</scope>
			</dependency>
	
		</dependencies>
	</dependencyManagement>
	
	<build>

		<plugins>
		
      <plugin>
	      <artifactId>maven-compiler-plugin</artifactId>
	      <configuration>
	      	<source>11</source>
	      	<target>11</target>
	        <encoding>utf-8</encoding>
	      </configuration>
	    </plugin>
	
	    <plugin>
		    <artifactId>maven-source-plugin</artifactId>
		    <executions>
		      <execution>
		        <id>attach-source</id>
		        <goals>
		          <goal>jar</goal>
		        </goals>
		      </execution>
		    </executions>
	    </plugin>

		  <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <configuration>
		      <properties>
		        <property>
		        	<!-- Prints out spaces and test name before/after every test method and automatically -->
		          <name>listener</name>
		          <value>uk.ac.ebi.utils.test.junit.TestOutputDecorator</value>
		        </property>
		       </properties>
		    </configuration>
		  </plugin>
		  
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<!-- TODO: the Markdown doclet doesn't work with JDK11 -->
					<useStandardDocletOptions>false</useStandardDocletOptions>
          <additionalOptions>-Xdoclint:none</additionalOptions>
					<!-- We use a Travis command to redirect reportOutputDirectory into <main dir>/docs/javadocs -->
          <destDir>${project.artifactId}</destDir>
				</configuration>
			</plugin>
		  		
    </plugins>
	

    <testResources>
	    <testResource>
	      <directory>src/test/resources</directory>
	      <filtering>true</filtering>
	    </testResource>
    </testResources>

    <resources>
	    <resource>
	      <directory>src/main/resources</directory>
	      <filtering>true</filtering>
	    </resource>
    </resources>

    <extensions>
	    <extension>
	      <groupId>org.apache.maven.wagon</groupId>
	      <artifactId>wagon-ssh</artifactId>
	      <version>2.6</version>
	    </extension>
    </extensions>    

	</build>
	
  <repositories>

		<repository>
	    <id>EBIBioSamples-GH-repo</id>
	    <url>https://raw.githubusercontent.com/EBIBioSamples/EBIBioSamples.github.io/maven-repo</url>
	    <snapshots>
        <enabled>true</enabled>
	    </snapshots>
    </repository>
		
  </repositories>
  
	<modules>
		<module>jutils</module>
		<module>jutils-io</module>
		<module>jutils-j2ee</module>
	</modules>
	    
</project>
